[metadata]
name = gluster_bridge
summary = Tendrl bridge for Gluster Storage
description-file =
    README.rst
author = Rohan Kanade
author-email = rkanade@redhat.com
home-page = http://www.tendrl.org/
classifier =
    Environment :: Tendrl
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: LGPL-2.1
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    gluster_bridge

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = gluster_bridge/locale
domain = gluster_bridge

[update_catalog]
domain = gluster_bridge
output_dir = gluster_bridge/locale
input_file = gluster_bridge/locale/gluster_bridge.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = gluster_bridge/locale/gluster_bridge.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source

[entry_points]
console_scripts =
    tendrl_gluster_bridge = gluster_bridge.manager.manager:main